tests/syntax/good/instr_while3.c

void f () {

while (3) {
f();
g();
};
}

