tests/syntax/bad/expr_assign_fail1.c
void f() {

int = 3;

}

